fixed overflows

--- a/src/components/cv/CV.css
+++ b/src/components/cv/CV.css
@@ -1,23 +1,16 @@
-.cv{
+.cv {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 1em;
   color: white;
   width: 100%;
-  margin: 1em 0;
-}
-
-.cv .document{
-  width: 100%;
-}
-
-.textLayer{
-  visibility: hidden!;
+  overflow: hidden !important;
 }
 
 .cvLink {
-  color: #bada55; /* Cyberpunk green */
+  color: #bada55;
+  /* Cyberpunk green */
   text-decoration: none;
   font-weight: bold;
   padding: 8px 16px;
@@ -29,13 +22,10 @@
 }
 
 .react-pdf__Page__canvas {
-  margin: 0;
-  width: 100% !important;
   height: 100% !important;
+  width: 100% !important;
 }
 
-.buttons{
+.buttons {
   display: inline-flex;
 }
-
-
